Dodat najnoviji proejkat

--- a/Vezbe09/build.properties
+++ b/Vezbe09/build.properties
@@ -1,10 +1,11 @@
-tomee.dir=/home/student2014/Documents/ra32-2011/apache-tomee-plus-1.5.0
+tomee.dir=\\C:\\Users\\Borko\\Desktop\\Borko\\fakultet\\ISA\\Softver\\apache-tomee-1.5.0-plus\\apache-tomee-plus-1.5.0
 dirname=Vezbe09
 warname=Vezbe09.war
 jarname=Vezbe09.jar
 earname=Vezbe09.ear
 
 db.driver=com.mysql.jdbc.Driver
-db.connectionString=jdbc:mysql://192.168.0.2:3306/ra_32_2011
-db.username=ra_32_2011
-db.password=ra_32_2011
+db.connectionString=jdbc:mysql://localhost:3306/ra_32_2011
+db.username=root
+db.password=root
+
