--- a/Vezbe09/build.properties
+++ b/Vezbe09/build.properties
@@ -1,11 +1,11 @@
-tomee.dir=C:\\Users\\Home\\Desktop\\ISAPROJEKAAT\\ISA\\apache-tomee-plus-1.5.0
+tomee.dir=C:\\Users\\ivan\\Desktop\\ISAPROJEKAT\\ISA\\apache-tomee-plus-1.5.0
 dirname=Vezbe09
 warname=Vezbe09.war
 jarname=Vezbe09.jar
 earname=Vezbe09.ear
 
 db.driver=com.mysql.jdbc.Driver
-db.connectionString=jdbc:mysql://localhost:3306/root
+db.connectionString=jdbc:mysql://127.0.0.1:3306/root
 db.username=root
 db.password=root
 
