--- a/Vezbe09/build.xml
+++ b/Vezbe09/build.xml
@@ -136,7 +136,8 @@
 			DROP TABLE IF EXISTS sto;
 			DROP TABLE IF EXISTS restoran_jelovnik;
 			DROP TABLE IF EXISTS jelovnik_jelo;
-			DROP TABLE IF EXISTS prijateljstva;
+			DROP TABLE IF EXISTS rezervacija;
+						
 						
 			
 			
