--- a/Vezbe09/build.properties
+++ b/Vezbe09/build.properties
@@ -1,4 +1,4 @@
-tomee.dir=C:\\Users\ivan\\Desktop\\ISAPROJEKAT\\ISA\\apache-tomee-plus-1.5.0
+tomee.dir=C:\\Users\\Home\\Desktop\\ISA\\apache-tomee-plus-1.5.0
 dirname=Vezbe09
 warname=Vezbe09.war
 jarname=Vezbe09.jar
